@@ -1,4 +1,9 @@
 Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
+	* src/dblib/unittests/t0002.c 
+	- changed to test multiple resultsets. 
+	- test works: buffering is broken.  
+
+Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
 	* src/dblib/unittests/t0002.c cleanup, no functional change
 
 Wed Apr 13 18:57:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
